<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantalla"
    tools:context=".Pantalla2">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="340dp"
        android:layout_height="305dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/date_view_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="290dp"
        android:layout_height="33dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="268dp"
        android:layout_height="175dp"
        android:layout_marginBottom="124dp"
        android:contentDescription="@string/grafica"
        android:src="@drawable/grafica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/perfilpequenyo"
        android:layout_width="49dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonprofile"
        android:contentDescription="@string/perfilpequenyo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pinguinopeque"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/atras"
        android:layout_width="55dp"
        android:layout_height="75dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttonsettings"
        android:contentDescription="@string/atras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/atras"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/anyadirHab"
        android:layout_width="48dp"
        android:layout_height="51dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonsettings"
        android:contentDescription="@string/boton_anyadirhabito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btnAlarma"
        android:layout_width="50dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonsettings"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/notificacion"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>